change html file

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <blockquote class="beets">
       <p>I have some <em>weird</em> habits. For instance, <strong>I love beets</strong>. Show me a salad bar and I will clean them out of their beets.</p>
-      <footer><cite><small>— Chris Pratt</small></cite></footer>
+      <footer><cite>— Chris Pratt</cite></footer>
     </blockquote>
 
     <h2>Common varieties</h2>
@@ -51,16 +51,16 @@
 
     <p>Serving size: 100 g</p>
     <dl>
-      <dt class="subjets">Energy:</dt>
+      <dt class="subjects">Energy:</dt>
       <dd><data value="180">180 kJ</data></dd>
 
-      <dt class="subjets">Carbohydrates:</dt>
+      <dt class="subjects">Carbohydrates:</dt>
       <dd><data value="9.96">9.96 g</data></dd>
 
-      <dt class="subjets">Fat:</dt>
+      <dt class="subjects">Fat:</dt>
       <dd><data value="0.18">0.18 g</data></dd>
 
-      <dt class="subjets">Protein:</dt>
+      <dt class="subjects">Protein:</dt>
       <dd><data value="1.68">1.68 g</data></dd>
     </dl>
   </main>
